--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,197 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  /* margin: 0; */
+  /* padding: 0; */
+  height: 100hv;
+  background-color: #121b2c;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+@media only screen and (max-width: 768px) {
+  /* header */
+
+  .header {
+    background: #005b85;
+    display: flex;
+    justify-content: space-around;
+    /* padding: 0 2rem; */
+    /* padding-left: 10px; */
+    align-items: center;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    width: 100%;
+    /* margin-bottom: 5rem; */
+    filter: drop-shadow(2px 4px 6px black);
+  }
+
+  .logo {
+    margin: 0 1.5rem;
+  }
+
+  /* homepage */
+
+  .intro-content {
+    display: flex;
+    /* background-image: url('https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1167&q=80'); */
+    background: linear-gradient(90deg, #000000e1, #2e5fb9c4), url('https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1167&q=80');
+    /* filter: blur(); */
+    color: white;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-right: 1rem;
+    /* padding-top: 3rem; */
+    height: 15rem;
+    margin-top: 6rem;
+  }
+
+  .intro-content h1 {
+    margin-top: 1rem;
+    margin-bottom: 0.2rem;
+  }
+
+  /* .intro-subtext {
+    margin: 0;
+  } */
+
+  /* .categories-container {
+    display: grid;
+    grid-template-rows: 2fr auto auto;
+  } */
+
+  .categories-container {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: auto auto auto;
+  }
+
+  .categories-list {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+  }
+
+  .categories h2,
+  .countries h2,
+  .conversion-header {
+    padding-left: 1rem;
+    background-color: #265788;
+    color: white;
+    filter: drop-shadow(2px 4px 6px black);
+  }
+
+  .category,
+  .country,
+  .conversion-form {
+    margin: 1rem;
+    /* padding: 0 1rem; */
+    background-color: #2b639e93;
+    border-radius: 5px;
+    filter: drop-shadow(4px 4px 6px black);
+    color: white;
+    /* padding: 0 1rem; */
+    min-height: 9rem;
+    /* width: 9rem; */
+  }
+
+  .category p,
+  .country .text {
+    padding-left: 1rem;
+  }
+
+  /* country page */
+
+  .country-page,
+  .conversion {
+    margin-top: 6.4rem;
+  }
+
+  .country-img-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  .country img {
+    padding: 0.5rem;
+    width: 5rem;
+    filter: drop-shadow(2px 6px 6px black);
+    border-radius: 12px;
+  }
+
+  .country .sub-text {
+    padding: 0.5rem 2rem;
+  }
+
+  /* ul {
+    paddin
+  } */
+
+  li {
+    list-style: none;
+  }
+
+  /* conversion */
+
+  .conversion-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .conversion label {
+    margin: 1rem;
+  }
+
+  .conversion input {
+    font-size: 1rem;
+    font-weight: 700;
+    border: none;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    height: 1.5rem;
+    background-color: #121b2c;
+    color: white;
+  }
+
+  .conversion input:focus {
+    outline: none;
+    filter: drop-shadow(2px 4px 6px black);
+  }
+
+  #currency-select {
+    background: #265788;
+    padding: 0.5rem;
+    outline: none;
+    border: none;
+    border-radius: 0.3rem;
+    overflow-y: scroll;
+  }
+
+  #currency-select:active{
+    size: 10;
+  }
+
+  .btn-display {
+    border: none;
+    background-color: #005b85;
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    color: white;
+    font-size: 1rem;
+  }
+
+  elect:-internal-list-box option {
+    line-height: 1rem !important;
+  }
+
+  #currency-select option {
+    margin: 0.5rem 0;
+    border-bottom: #121b2c;
+  }
 }
