--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,7 @@
 
 body {
   box-sizing: border-box;
-  /* margin: 0; */
-  /* padding: 0; */
-  height: 100hv;
+  height: 100vh;
   background-color: #121b2c;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -19,14 +17,11 @@ body {
     background: #005b85;
     display: flex;
     justify-content: space-around;
-    /* padding: 0 2rem; */
-    /* padding-left: 10px; */
     align-items: center;
     position: fixed;
     top: 0;
     z-index: 2;
     width: 100%;
-    /* margin-bottom: 5rem; */
     filter: drop-shadow(2px 4px 6px black);
   }
 
@@ -36,16 +31,17 @@ body {
 
   /* homepage */
 
+  a {
+    text-decoration: none;
+  }
+
   .intro-content {
     display: flex;
-    /* background-image: url('https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1167&q=80'); */
     background: linear-gradient(90deg, #000000e1, #2e5fb9c4), url('https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1167&q=80');
-    /* filter: blur(); */
     color: white;
     flex-direction: column;
     align-items: flex-end;
     padding-right: 1rem;
-    /* padding-top: 3rem; */
     height: 15rem;
     margin-top: 6rem;
   }
@@ -54,15 +50,6 @@ body {
     margin-top: 1rem;
     margin-bottom: 0.2rem;
   }
-
-  /* .intro-subtext {
-    margin: 0;
-  } */
-
-  /* .categories-container {
-    display: grid;
-    grid-template-rows: 2fr auto auto;
-  } */
 
   .categories-container {
     display: grid;
@@ -86,16 +73,14 @@ body {
 
   .category,
   .country,
-  .conversion-form {
+  .conversion-form,
+  .country-info {
     margin: 1rem;
-    /* padding: 0 1rem; */
     background-color: #2b639e93;
     border-radius: 5px;
     filter: drop-shadow(4px 4px 6px black);
     color: white;
-    /* padding: 0 1rem; */
     min-height: 9rem;
-    /* width: 9rem; */
   }
 
   .category p,
@@ -116,7 +101,8 @@ body {
     justify-content: space-between;
   }
 
-  .country img {
+  .country img,
+  .country-info img {
     padding: 0.5rem;
     width: 5rem;
     filter: drop-shadow(2px 6px 6px black);
@@ -126,10 +112,6 @@ body {
   .country .sub-text {
     padding: 0.5rem 2rem;
   }
-
-  /* ul {
-    paddin
-  } */
 
   li {
     list-style: none;
@@ -142,6 +124,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  .conversion-form h3 {
+    padding: 1rem 1rem 0;
+    align-self: flex-start;
+    filter: drop-shadow(2px 6px 6px black);
   }
 
   .conversion label {
@@ -173,10 +161,6 @@ body {
     overflow-y: scroll;
   }
 
-  #currency-select:active{
-    size: 10;
-  }
-
   .btn-display {
     border: none;
     background-color: #005b85;
@@ -186,12 +170,25 @@ body {
     font-size: 1rem;
   }
 
-  elect:-internal-list-box option {
-    line-height: 1rem !important;
-  }
-
   #currency-select option {
     margin: 0.5rem 0;
     border-bottom: #121b2c;
+  }
+
+  .country-info,
+  .country-info-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+  }
+
+  .country-info h2 {
+    filter: drop-shadow(2px 6px 6px black);
+  }
+
+  .country-info img {
+    align-self: flex-end;
+    padding: 0;
   }
 }
