--- a/src/index.css
+++ b/src/index.css
@@ -173,7 +173,6 @@ body {
 
   .conversion input:focus {
     outline: none;
-    filter: drop-shadow(2px 4px 6px black);
   }
 
   #currency-select {
@@ -183,6 +182,13 @@ body {
     border: none;
     border-radius: 0.3rem;
     overflow-y: scroll;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+    height: 11rem;
   }
 
   .btn-display,
@@ -195,9 +201,11 @@ body {
     font-size: 1rem;
   }
 
-  #currency-select option {
-    margin: 0.5rem 0;
-    border-bottom: #121b2c;
+  #currency-select li {
+    margin: 0.7rem 0;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid #121b2c;
+
   }
 
   .country-info,
@@ -229,5 +237,14 @@ body {
 
   .search-bar input::placeholder {
     text-align: center;
+  }
+
+  .currency-list {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
   }
 }
