--- a/src/index.css
+++ b/src/index.css
@@ -10,238 +10,407 @@ body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-@media only screen and (max-width: 768px) {
-  /* header */
+/* header */
 
-  .header {
-    background: #005b85;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    z-index: 2;
-    width: 100%;
-    filter: drop-shadow(2px 4px 6px black);
+.header {
+  background: #005b85;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  width: 100%;
+  filter: drop-shadow(2px 4px 6px black);
+}
+
+/* homepage */
+
+.home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  color: #005b85;
+  height: 100vh;
+}
+
+.home-page img {
+  width: 7rem;
+  filter: drop-shadow(2px 2px 6px black);
+}
+
+.home-page h1 {
+  filter: drop-shadow(2px 2px 2px black);
+}
+
+/* continents */
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.intro-content {
+  display: flex;
+  background: linear-gradient(90deg, #000000e1, #2e5fb9c4), url('https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1167&q=80');
+  color: white;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-right: 1rem;
+  height: 15rem;
+  margin-top: 4rem;
+}
+
+.intro-content h1 {
+  margin-top: 1rem;
+  margin-bottom: 0.2rem;
+}
+
+.categories-container {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  grid-template-rows: auto auto auto;
+}
+
+.categories-list {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+}
+
+.categories h2,
+.countries h2,
+.conversion-header {
+  padding-left: 1rem;
+  background-color: #265788;
+  color: white;
+  filter: drop-shadow(2px 4px 6px black);
+}
+
+.category,
+.country,
+.conversion-form,
+.country-info {
+  margin: 1rem;
+  background-color: #2b639e93;
+  border-radius: 5px;
+  filter: drop-shadow(4px 4px 6px black);
+  color: white;
+  min-height: 9rem;
+}
+
+.category p,
+.country .text {
+  padding-left: 1rem;
+}
+
+/* country page */
+
+.country-page,
+.conversion {
+  margin-top: 4.4rem;
+}
+
+.country-img-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.country img,
+.country-info img {
+  padding: 0.5rem;
+  width: 5rem;
+  filter: drop-shadow(2px 6px 6px black);
+  border-radius: 12px;
+}
+
+.country .sub-text {
+  padding: 0.5rem 2rem;
+}
+
+li {
+  list-style: none;
+}
+
+/* conversion */
+
+.conversion-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.conversion-form h3 {
+  padding: 1rem 1rem 0;
+  align-self: flex-start;
+  filter: drop-shadow(2px 6px 6px black);
+}
+
+.conversion label {
+  margin: 1rem;
+}
+
+.conversion input {
+  font-size: 1rem;
+  font-weight: 700;
+  border: none;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  height: 1.5rem;
+  background-color: #121b2c;
+  color: white;
+}
+
+.search-bar input {
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 2rem;
+  text-align: center;
+}
+
+.conversion input:focus {
+  outline: none;
+}
+
+#currency-select {
+  background: #265788;
+  padding: 0.5rem;
+  outline: none;
+  border: none;
+  border-radius: 0.3rem;
+  overflow-y: scroll;
+
+  /* position: fixed; */
+
+  /* z-index: 2; */
+  height: 11rem;
+}
+
+.btn-display,
+#proceed {
+  border: none;
+  background-color: #005b85;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  color: white;
+  font-size: 1rem;
+}
+
+#currency-select li {
+  margin: 0.7rem 0;
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid #121b2c;
+}
+
+.country-info,
+.country-info-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.country-info h2 {
+  filter: drop-shadow(2px 6px 6px black);
+}
+
+.country-info img {
+  align-self: flex-end;
+  padding: 0;
+}
+
+.search-bar {
+  margin: 2rem 0;
+  display: flex;
+  justify-content: center;
+}
+
+.search-bar input:focus {
+  outline: none;
+}
+
+.search-bar input::placeholder {
+  text-align: center;
+}
+
+.currency-list {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.scroll {
+  opacity: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  body::-webkit-scrollbar {
+    width: 10px;
+    background-color: #f5f5f5;
   }
 
-  /* homepage */
-
-  .home-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    color: #005b85;
-    height: 100vh;
-  }
-
-  .home-page img {
-    width: 7rem;
-    filter: drop-shadow(2px 2px 6px black);
-  }
-
-  .home-page h1 {
-    filter: drop-shadow(2px 2px 2px black);
-  }
-
-  /* continents */
-
-  a {
-    text-decoration: none;
-    color: inherit;
+  body::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #555;
   }
 
   .intro-content {
-    display: flex;
-    background: linear-gradient(90deg, #000000e1, #2e5fb9c4), url('https://images.unsplash.com/photo-1502920514313-52581002a659?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1167&q=80');
-    color: white;
-    flex-direction: column;
-    align-items: flex-end;
-    padding-right: 1rem;
-    height: 15rem;
-    margin-top: 4rem;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-top: 0;
   }
 
   .intro-content h1 {
-    margin-top: 1rem;
-    margin-bottom: 0.2rem;
+    font-size: 5rem;
   }
 
-  .categories-container {
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-    grid-template-rows: auto auto auto;
+  .intro-content p {
+    font-size: 2rem;
   }
 
-  .categories-list {
-    display: grid;
-    grid-template-columns: 2fr 2fr;
-  }
-
-  .categories h2,
-  .countries h2,
-  .conversion-header {
-    padding-left: 1rem;
-    background-color: #265788;
-    color: white;
-    filter: drop-shadow(2px 4px 6px black);
+  .scroll {
+    align-self: flex-end;
+    position: absolute;
+    bottom: 0;
+    animation: appear 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   }
 
   .category,
   .country,
   .conversion-form,
   .country-info {
-    margin: 1rem;
-    background-color: #2b639e93;
-    border-radius: 5px;
-    filter: drop-shadow(4px 4px 6px black);
-    color: white;
-    min-height: 9rem;
+    min-height: 15rem;
+    width: 30rem;
   }
 
-  .category p,
-  .country .text {
-    padding-left: 1rem;
-  }
-
-  /* country page */
-
-  .country-page,
-  .conversion {
-    margin-top: 4.4rem;
-  }
-
-  .country-img-container {
+  .categories-container {
     display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 5rem 10rem;
   }
 
-  .country img,
-  .country-info img {
-    padding: 0.5rem;
-    width: 5rem;
-    filter: drop-shadow(2px 6px 6px black);
-    border-radius: 12px;
-  }
-
-  .country .sub-text {
-    padding: 0.5rem 2rem;
-  }
-
-  li {
-    list-style: none;
-  }
-
-  /* conversion */
-
-  .conversion-form {
+  .wrapper1,
+  .wrapper2 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    gap: 8rem;
+  }
+
+  .category {
+    display: flex;
+    justify-content: space-around;
     align-items: center;
   }
 
-  .conversion-form h3 {
-    padding: 1rem 1rem 0;
-    align-self: flex-start;
-    filter: drop-shadow(2px 6px 6px black);
+  .category p {
+    font-size: 1.5rem;
+    align-self: flex-end;
+    margin-bottom: 1rem;
   }
 
-  .conversion label {
-    margin: 1rem;
+  .category img {
+    width: 10rem;
   }
 
-  .conversion input {
-    font-size: 1rem;
-    font-weight: 700;
-    border: none;
-    padding: 0.5rem;
-    border-radius: 1rem;
-    height: 1.5rem;
-    background-color: #121b2c;
-    color: white;
+  .categories h2,
+  .countries h2,
+  .conversion-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
   }
 
   .search-bar input {
-    border: none;
-    border-radius: 5px;
+    width: 20rem;
     padding: 0.5rem 2rem;
-    text-align: center;
-  }
-
-  .conversion input:focus {
-    outline: none;
-  }
-
-  #currency-select {
-    background: #265788;
-    padding: 0.5rem;
-    outline: none;
-    border: none;
-    border-radius: 0.3rem;
-    overflow-y: scroll;
-
-    /* position: fixed; */
-
-    /* z-index: 2; */
-    height: 11rem;
-  }
-
-  .btn-display,
-  #proceed {
-    border: none;
-    background-color: #005b85;
-    border-radius: 5px;
-    padding: 0.5rem 1rem;
-    color: white;
     font-size: 1rem;
   }
 
-  #currency-select li {
-    margin: 0.7rem 0;
-    padding-bottom: 0.5rem;
-    border-bottom: 1px solid #121b2c;
-  }
-
-  .country-info,
-  .country-info-list {
+  .countries-container {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
-  }
-
-  .country-info h2 {
-    filter: drop-shadow(2px 6px 6px black);
-  }
-
-  .country-info img {
-    align-self: flex-end;
-    padding: 0;
-  }
-
-  .search-bar {
-    margin: 2rem 0;
-    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
   }
 
-  .search-bar input:focus {
-    outline: none;
+  .country {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
 
-  .search-bar input::placeholder {
-    text-align: center;
+  .country-info {
+    display: flex;
+    align-items: center;
+    align-self: center;
+    margin-bottom: 5rem;
   }
 
-  .currency-list {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 2;
+  .conversion {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100vh;
+    margin-top: 0;
+  }
+
+  .conversion-header {
+    margin-top: 4.4rem;
+  }
+
+  /* .conversion-form {
+    align-self: center;
+  } */
+
+  .country-info article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .country-info img {
+    margin-top: 15rem;
+    margin-bottom: 2rem;
+  }
+
+  #currency-select::-webkit-scrollbar {
+    width: 5px;
+    background-color: #005b85;
+  }
+
+  #currency-select::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #555;
+  }
+}
+
+@keyframes appear {
+  0% {
+    transform: translateZ(-1400px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+
+@keyframes disappear {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateX(1000px);
+    opacity: 0;
   }
 }
