--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@ a {
 .category,
 .country,
 .conversion-form,
-.country-info {
+.country-info-container {
   margin: 1rem;
   background-color: #2b639e93;
   border-radius: 5px;
@@ -140,6 +140,7 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0;
 }
 
 .conversion-form h3 {
@@ -204,7 +205,14 @@ li {
   border-bottom: 1px solid #121b2c;
 }
 
-.country-info,
+.country-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.country-info-container,
 .country-info-list {
   display: flex;
   flex-direction: column;
@@ -248,6 +256,12 @@ li {
   opacity: 0;
 }
 
+@media only screen and (min-width: 1024px) {
+  .category {
+    width: 20rem;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   body::-webkit-scrollbar {
     width: 10px;
@@ -282,10 +296,18 @@ li {
     animation: appear 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   }
 
-  .category,
+  .category {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    min-height: 12rem;
+    max-width: 30rem;
+  }
+
   .country,
   .conversion-form,
-  .country-info {
+  .country-info-container {
     min-height: 15rem;
     width: 30rem;
   }
@@ -294,7 +316,7 @@ li {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin: 5rem 10rem;
+    margin: 5rem 0;
   }
 
   .wrapper1,
@@ -302,12 +324,6 @@ li {
     display: flex;
     flex-direction: column;
     gap: 8rem;
-  }
-
-  .category {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
   }
 
   .category p {
@@ -349,9 +365,18 @@ li {
 
   .country-info {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+  .country-info-container {
+    display: flex;
+    flex-direction: row;
     align-items: center;
     align-self: center;
-    margin-bottom: 5rem;
+    justify-content: space-between;
+    width: 55rem;
   }
 
   .conversion {
